Fixed help section sticking out

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ section{
   }
 
   .inside-size {
-    font-size: 3vw;
+    font-size: 2vw;
     letter-spacing: 2px;
   }
 
